    Default is `3` seconds. Set to `0` to disable.

* Flag Widget
  - Optimized flag update methods.

* Gear Widget
  - Fixed a typo in "battery_bar_color_regen" default value,
    which would not show regeneration color.

* Lap time history Widget
  - Fixed missing fuel unit conversion for gallon.
  - Optimized lap history update methods.

* Sectors Widget
  - Now shows laptime "time gap" on "target time" bar,
    which shows laptime difference between current laptime and target laptime.
    Target laptime source depends on new "target_laptime" option.
  - Add new "target_laptime" option,
    which sets target laptime for display target reference lap and sector time.
    Set `Theoretical` to show theoretical best sector time from session best sectors.
    Set `Personal` to show sector time from personal best lap time.
  - Removed old "target_time_mode" options.
  - Removed old "always_show_laptime_gap" options.

* Stint history Widget
  - Optimized stint history update methods.

* Shared Memory API
  - Fixed a rare issue where rapidly restarting API could freeze the APP.

2.11.1 (2024-03-28)
-----------------------------
* Trailing Widget
  - Add "draw_order_index_*" options,
    which sets draw order of plot lines.

2.11.0 (2024-03-28)
-----------------------------
* [New]Fuel calculator
  - New "Fuel Calculator" can be accessed from Tools menu in main window.
    Editable options:
      * Lap time (minute:second:millisecond), can be auto-filled by Reload.
      * Tank capacity (liter or gallon), can be auto-filled by Reload.
      * Fuel consumption (liter or gallon), can be auto-filled by Reload.
      * Race length in minutes.
      * Race length in laps.
      * Formation/Rolling.
      * Average pit stop in seconds.
      * Starting fuel (liter or gallon).
    Output values:
      * Total required race fuel (liter or gallon).
      * End stint remaining fuel (liter or gallon).
      * Total required pit stops.