@@ -857,12 +857,15 @@ WIDGET_DEFAULT = {
         "inner_gap": 2,
         "max_indicator_height": 5,
         "bkg_color": "#222222",
-        "show_brake_pressure": True,
         "show_throttle": True,
+        "show_throttle_filtered": True,
         "throttle_color": "#77FF00",
         "show_brake": True,
+        "show_brake_filtered": True,
+        "show_brake_pressure": True,
         "brake_color": "#FF2200",
         "show_clutch": True,
+        "show_clutch_filtered": True,
         "clutch_color": "#00C2F2",
         "show_ffb_meter": True,
         "ffb_color": "#888888",
